used connect-flash version

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -39,4 +39,13 @@
 </div>
 
 <div id="container" class="container">
-    <%- message %>
+    <% if (success) { %>
+    <div class="alert alert-success">
+        <%= success %>
+    </div>
+    <% } %>
+    <% if (error) { %>
+    <div class="alert alert-error">
+        <%= error %>
+    </div>
+    <% } %>
